--- a/BarBot/BarBot.UWP/Styles/IngredientRowStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/IngredientRowStyles.xaml
@@ -22,16 +22,15 @@
         <Setter Property="HorizontalAlignment" Value="Left" />
     </Style>
 
-    <Style x:Key="IngredientComboBoxStyle" TargetType="ComboBox">
+    <Style x:Key="IngredientNameTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Margin" Value="15,0,0,0" />
         <Setter Property="Height" Value="{StaticResource RowHeight}" />
-        <Setter Property="Width" Value="385" />
+        <Setter Property="Width" Value="365" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         <Setter Property="FontSize" Value="{StaticResource FontSize}" />
-        <Setter Property="Background" Value="{x:Null}" />
-        <Setter Property="BorderBrush" Value="{x:Null}" />
     </Style>
 
     <Style x:Key="AddIngredientTextBlockStyle" TargetType="TextBlock">
