--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_AddIngredientButton.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_AddIngredientButton.xaml
@@ -18,6 +18,20 @@
     <Grid x:Name="AddIngredientButtonGrid"
           Style="{StaticResource IngredientRowGridStyle}"
           Background="#535353">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="TapStates">
+                <VisualState x:Name="PointerDown">
+                    <Storyboard>
+                        <PointerDownThemeAnimation TargetName="AddIngredientButtonGrid" />
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="PointerUp">
+                    <Storyboard>
+                        <PointerUpThemeAnimation TargetName="AddIngredientButtonGrid" />
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <TextBlock x:Name="AddIngredientTextBlock"
                    Text="Add Ingredient"
                    Style="{StaticResource AddIngredientTextBlockStyle}" />
