--- a/BarBot/BarBot.UWP/Styles/ContentDialogStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/ContentDialogStyles.xaml
@@ -124,6 +124,24 @@
         <Setter Property="FontSize" Value="{StaticResource ButtonFontSize}" />
         <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         <Setter Property="Foreground" Value="White" />
+        <Setter Property="Width" Value="250" />
+        <Setter Property="Height" Value="{StaticResource GarnishRowHeight}" />
+        <Setter Property="Margin" Value="0,0,0,20" />
+        <Setter Property="Transitions">
+            <Setter.Value>
+                <TransitionCollection>
+                    <EntranceThemeTransition />
+                </TransitionCollection>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="GarnishReloadButtonStyle" TargetType="Button">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="{StaticResource ButtonFontSize}" />
+        <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
+        <Setter Property="Foreground" Value="White" />
         <Setter Property="Width" Value="175" />
         <Setter Property="Height" Value="{StaticResource GarnishRowHeight}" />
         <Setter Property="Margin" Value="0,0,0,20" />
