Updated to 1366x768 resolution for new screen, changed Binding to x:Bind

--- a/BarBot/BarBot.UWP/App.xaml
+++ b/BarBot/BarBot.UWP/App.xaml
@@ -6,6 +6,9 @@
     RequestedTheme="Dark">
     <Application.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/GlobalStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
                     <!-- Button Styles -->
