--- a/BarBot/BarBot.UWP/Styles/ContainerPanelStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/ContainerPanelStyles.xaml
@@ -3,13 +3,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Styles">
 
-    <!-- Dimensions -->
-    <x:Double x:Key="PageWidth">1280</x:Double>
-    <x:Double x:Key="PageHeight">720</x:Double>
-
-    <x:Double x:Key="WrapperWidth">1240</x:Double>
-    <x:Double x:Key="WrapperHeight">620</x:Double>
-
     <!-- Container List -->
     <Style x:Key="ContainerListMainGridStyle" TargetType="Grid">
         <Setter Property="Height" Value="{StaticResource PageHeight}" />
@@ -17,14 +10,14 @@
     </Style>
 
     <Style x:Key="ContainerListWrapperGridStyle" TargetType="Grid">
-        <Setter Property="Width" Value="{StaticResource WrapperWidth}" />
-        <Setter Property="Height" Value="{StaticResource WrapperHeight}" />
+        <Setter Property="Width" Value="{StaticResource ContainerPanelWidth}" />
+        <Setter Property="Height" Value="{StaticResource ContainerPanelHeight}" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="20,20,20,20" />
     </Style>
 
     <Style x:Key="ContainerListIcGridStyle" TargetType="Grid">
-        <Setter Property="Margin" Value="0,40,0,0" />
+        <Setter Property="Margin" Value="0,20,0,0" />
     </Style>
 </ResourceDictionary>
