--- a/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
@@ -5,9 +5,7 @@
     xmlns:local="using:BarBot.UWP.UserControls.CategoryList"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="720"
-    d:DesignWidth="1280">
+    mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
