--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/PouringContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/PouringContentDialog.xaml
@@ -28,6 +28,6 @@
     </ContentDialog.Style>
 
     <TextBlock x:Name="TextBlock"
-               Text="{Binding Path=Text}"
+               Text="{x:Bind Path=Text, Mode=OneWay}"
                Style="{StaticResource TextBlockStyle}" />
 </ContentDialog>
