Enabled Enter Key to submit Textbox in Seach & Settings Content Dialogs

--- a/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
@@ -10,7 +10,8 @@
     IsPrimaryButtonEnabled="True"
     PrimaryButtonText="Search"
     CloseButtonText="Cancel"
-    PrimaryButtonClick="SearchDialog_PrimaryButtonClick">
+    PrimaryButtonClick="SearchDialog_PrimaryButtonClick"
+    KeyUp="ContentDialog_KeyUp">
 
     <ContentDialog.Resources>
         <ResourceDictionary>
