--- a/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
@@ -10,7 +10,8 @@
     IsPrimaryButtonEnabled="True"
     PrimaryButtonText="Login"
     CloseButtonText="Cancel"
-    PrimaryButtonClick="PasswordDialog_PrimaryButtonClick">
+    PrimaryButtonClick="PasswordDialog_PrimaryButtonClick"
+    KeyUp="ContentDialog_KeyUp">
     
     <ContentDialog.Resources>
         <ResourceDictionary>
