--- a/BarBot/Droid/Resources/menu/top_menus.axml
+++ b/BarBot/Droid/Resources/menu/top_menus.axml
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-  <item
+    <!--<item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:showAsAction="ifRoom"
-       android:title="Search" />
+       android:title="@string/action_search" />-->
+    <item
+       android:id="@+id/menu_containers"
+       android:icon="@drawable/ic_settings_white_48dp"
+       android:showAsAction="ifRoom"
+       android:title="@string/action_containers" />
+    <!--<item android:id="@+id/action_settings"
+          android:title="@string/action_settings"
+          android:showAsAction="never"/>-->
 </menu>
