--- a/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
@@ -16,25 +16,38 @@
     </UserControl.Resources>
 
     <Grid Name="CategoryListMainGrid" Style="{StaticResource CategoryListMainGridStyle}">
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <ContentThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
-        <Canvas Name="CategoryListCanvas" Style="{StaticResource CategoryListCanvasStyle}" />
+        <Canvas Name="CategoryListCanvas" Style="{StaticResource CategoryListCanvasStyle}">
+            <Canvas.ChildrenTransitions>
+                <TransitionCollection>
+                    <ContentThemeTransition/>
+                </TransitionCollection>
+            </Canvas.ChildrenTransitions>
+        </Canvas>
         <Button x:Name="CategoryListBackButton" 
                 Click="Previous_Page"
                 Style="{StaticResource CategoryListBackButtonStyle}">
-            <Button.Transitions>
-                <TransitionCollection>
-                    <EntranceThemeTransition />
-                </TransitionCollection>
-            </Button.Transitions>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="BackButtonImg" 
-                           Stretch="Uniform" 
-                           Source="ms-appx:///Assets/BackButton.png"/>
+                    <Grid x:Name="CategoryListBackButtonGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="CategoryListBackButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="CategoryListBackButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Image x:Name="BackButtonImg" 
+                               Stretch="Uniform" 
+                               Source="ms-appx:///Assets/BackButton.png"/>
+                    </Grid>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -42,16 +55,28 @@
         <Button x:Name="CategoryListNextButton" 
                 Click="Next_Page" 
                 Style="{StaticResource CategoryListNextButtonStyle}">
-            <Button.Transitions>
-                <TransitionCollection>
-                    <EntranceThemeTransition />
-                </TransitionCollection>
-            </Button.Transitions>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="NextButtonImg" 
-                           Stretch="Uniform" 
-                           Source="ms-appx:///Assets/NextButton.png"/>
+                    <Grid x:Name="CategoryListNextButtonGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="CategoryListNextButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="CategoryListNextButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Image x:Name="NextButtonImg" 
+                               Stretch="Uniform" 
+                               Source="ms-appx:///Assets/NextButton.png"/>
+                    </Grid>
                 </ControlTemplate>
             </Button.Template>
         </Button>
