--- a/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeList/Uc_RecipeList.xaml
@@ -8,22 +8,35 @@
     mc:Ignorable="d">
 
     <Grid Height="{StaticResource PageHeight}" Width="{StaticResource PageWidth}">
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <ContentThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
-        <Canvas Name="recipeTileCanvas" Height="{StaticResource WrapperHeight}" Width="{StaticResource WrapperWidth}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0"></Canvas>
-
-        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="230" Margin="0,240,20,200" VerticalAlignment="Top" Width="120">
-            <Button.Transitions>
+        <Canvas Name="recipeTileCanvas" Height="{StaticResource WrapperHeight}" Width="{StaticResource WrapperWidth}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
+            <Canvas.ChildrenTransitions>
                 <TransitionCollection>
-                    <EntranceThemeTransition />
+                    <ContentThemeTransition/>
                 </TransitionCollection>
-            </Button.Transitions>
+            </Canvas.ChildrenTransitions>
+        </Canvas>
+
+        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="230" Margin="60,218,0,0" VerticalAlignment="Top" Width="120">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="BackButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/BackButton.png"/>
+                    <Grid x:Name="BackButtonGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="BackButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="BackButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Image x:Name="BackButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/BackButton.png"/>
+                    </Grid>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -36,15 +49,27 @@
                    FontSize="75"
                    Visibility="Collapsed" />
 
-        <Button x:Name="NextButton" Click="Next_Page" HorizontalAlignment="Right" Height="230" Margin="0,240,20,200" VerticalAlignment="Top" Width="120">
-            <Button.Transitions>
-                <TransitionCollection>
-                    <EntranceThemeTransition />
-                </TransitionCollection>
-            </Button.Transitions>
+        <Button x:Name="NextButton" Click="Next_Page" HorizontalAlignment="Right" Height="230" Margin="0,218,80,0" VerticalAlignment="Top" Width="120">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Image x:Name="NextButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/NextButton.png"/>
+                    <Grid x:Name="NextButtonGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="NextButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="NextButtonGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Image x:Name="NextButtonImg" Stretch="Uniform" Source="ms-appx:///Assets/NextButton.png"/>
+                    </Grid>
                 </ControlTemplate>
             </Button.Template>
         </Button>
